Fixes layout issue for long unbroken string (#1252)
* break long string
* resolves layout issue for long unbroken string
* Fixes #158

--- a/extension/popup/popup.css
+++ b/extension/popup/popup.css
@@ -89,6 +89,9 @@ body,
   font-size: 1.125rem;
   letter-spacing: 0.05rem;
   font-weight: 700;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 #popup-footer {
@@ -175,6 +178,7 @@ body,
 #transcript,
 #text-display {
   text-align: center;
+  word-wrap: break-word;
 }
 
 #transcript {
